[H] thresholds for screen scrolling changed. (they should be client-option)
[H] wraithform is lv.20 spell now (for the balance's sake)
[B] Green/Blue etc. Dragonriders were all red.
[B] Shattering potions of Healing didn't heal the players.
[B] when logging in, the player was slightly displaced.
[B] Receive_activate_skill did nasties when out of energy.


** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
things to do before 4.0.0

- implement guest-account
- rebalance skill-points
- devise a nice way to control ego-item generation w/o luck
- fix gfx
- refine pk code
- source-code cleanup
- export configurable things to tomenet.cfg
- a spoonful of documentation for skill system

(multi-dungeon, multi-town, terrains, pets etc. are put off after 4.0.0 ...)


=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
  * a mage would just raise 'Sorcery' to 10 for Wraithform..
    is it within the design?
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks. (project_m)
[B][C] chat-history contains lines with 'mindcrafter'.